<project xmlns="http://maven.apache.org/POM/4.1.0-rc-2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0-rc-2 https://maven.apache.org/xsd/maven-4.1.0-rc-2.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.github.caciocavallosilano</groupId>
    <artifactId>cacio</artifactId>
    <version>1.18-SNAPSHOT</version>
  </parent>
  <artifactId>cacio-tta</artifactId>
  <packaging>jar</packaging>
  <name>CacioTAA Java Module</name>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.12.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
    </dependency>
    <dependency>
      <groupId>com.github.caciocavallosilano</groupId>
      <artifactId>cacio-shared</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-swing-junit</artifactId>
      <version>3.17.1</version>
    </dependency>
    <dependency>
      <groupId>com.jidesoft</groupId>
      <artifactId>jide-oss</artifactId>
      <version>3.6.18</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>25</source>
          <target>25</target>
          <compilerArgs>
            <arg>-XDignore.symbol.file=true</arg>
            <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
